fix: LADI-3776 Block Staff Article Item - Text is clipped when resized (#932)
* fix: experiemnting with truncation

* fix: experimenting with truncation

* fix: experimenting with truncation

* fix: reinstate removeHtmlTruncate but remove the truncation

* fix: update story to only 200 characters

* fix: update SectionStaffArticleLis and its stories

* fix: linting

* fix: delete truncation

* fix: change truncate length

* fix: remove comments

* fix: linting

* fix: changed truncation length

* fix: linting

* fix: return stories to OG

* fix: return stories to OG

* fix: remove commented out code

* fix: delete styles

* fix: restore the previous truncation in the component files

* fix: remove ftva-description

* fix: uncomment height lone 36

* fix: add min-height

* fix: first-child padding bottom

* fix: first-child padding-top

* fix: unset the height

---------

--- a/packages/vue-component-library/src/styles/ftva/_block-staff-article-item.scss
+++ b/packages/vue-component-library/src/styles/ftva/_block-staff-article-item.scss
@@ -12,7 +12,7 @@
     aspect-ratio: var(--image-aspect-ratio);
     margin-right: var(--space-xl);
   }
-  
+
   .meta {
     display: flex;
     flex-direction: column;
@@ -44,10 +44,10 @@
   .description-summary-only {
     @include ftva-body;
     color: $body-grey;
-    @include truncate(2);
     margin-top: 8px;
   }
-/* TODO Remove .date css rules for ftva as we are using ftva-date class where this component is used on the different templates*/
+
+  /* TODO Remove .date css rules for ftva as we are using ftva-date class where this component is used on the different templates*/
   .date {
     position: absolute;
     bottom: var(--space-s);
@@ -61,13 +61,15 @@
     height: 70px;
     overflow: hidden;
   }
+
   /* TODO end */
+
   .ftva-description {
     @include ftva-body;
     color: $body-grey;
-    @include truncate(2);
   }
-  .ftva-date{
+
+  .ftva-date {
     @include ftva-emphasized-subtitle;
     color: $accent-blue;
     line-height: 1;
